--- a/allpages/allsites.html
+++ b/allpages/allsites.html
@@ -3,21 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Інфа про аніме</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
-<body bgcolor="#AB00FF" background="images/bg.jpg" no-repeat bgcolor="green" alink="white">
-     <nav class="fixed-nav-bar">
-         <img class="site_small_logo" src="images/site_small_nav_logo.jpg" height="54" width="54">
-         <a class="fixed-nav-bar-button" href="/index.html">Головна</a>
-         <a class="fixed-nav-bar-button0" href="/pages/news.html">Новини</a>
-         <a class="fixed-nav-bar-button0" href="/pages/allpages.html">Статті</a>
-         <a><img src="/images/logo_yalbizesayt.jpg" height="54" width="150"></a>
-         <a class="fixed-nav-bar-button0" href="/pages/write.html">Написати статтю</a>
+ <body bgcolor="#AB00FF" background="../images/bg.jpg" no-repeat bgcolor="green" alink="white">
+   <nav class="fixed-nav-bar">
+         <img class="site_small_logo" src="../images/site_small_nav_logo.jpg" height="54" width="54">
+         <a class="fixed-nav-bar-button" href="../index.html">Головна</a>
+         <a class="fixed-nav-bar-button0" href="../pages/news.html">Новини</a>
+         <a class="fixed-nav-bar-button0" href="../pages/allpages.html">Статті</a>
+         <a class="fixed-nav-bar-button0" href="../pages/work.html">Послуги</a>
+         <a><img src="../images/logo_yalbizesayt.jpg" height="54" width="150"></a>
+         <a class="fixed-nav-bar-button0" href="../pages/write.html">Написати статтю</a>
          <a class="fixed-nav-bar-button0" href="#contact">Контакти</a>
-         <a class="fixed-nav-bar-button0" href="/pages/about.html">Про проект</a>
-         <a class="fixed-nav-bar-button2" href="/pages/buy_pro.html">Купити PRO версію</a>
+         <a class="fixed-nav-bar-button0" href="../pages/about.html">Про проект</a>
+         <a class="fixed-nav-bar-button2" href="../pages/buy_pro.html">Підтримати розробників</a>
      </nav>
-<body>
+     <h1 align="center" style="color: white">#ЯКБИЦЕСАЙТ</h1>
+<h4 align="center">www.yakbizesayt.com.ua</h4>
+<hr color="black">
 <h2 >Неймовірний рекорд японського аніме «Клинок, що розтинає демонів: Нескінченний поїзд»: $ 44 млн за три дні
 </h2>
 <p> <img src="images/a1.jpeg" width="232" height="300" alt="плакат" align="left" 
@@ -39,12 +42,17 @@
 <p>    Основою для касового хіта послужила виходить з 2016 року манга «Клинок, що розтинає демонів». Загальний тираж її перевищив 100 мільйонів екземплярів. З квітня по вересень минулого року йшов анімаційний телесеріал з 26 епізодів, який отримав дуже хорошу пресу і ряд престижних нагород. У США серіал вийде в двох частинах на Blu-Ray. Повнометражна стрічка «Клинок, що розтинає демонів: Нескінченний поїзд» є прямим продовженням серіалу з тією ж командою творців і акторів озвучення. Кінопрокатний реліз в США запланований на початок 2021 року.
 </p>
 <p>    Дія манги розгортається в японській глибині в епоху Тайсьо. Одного разу головний герой - юний торговець вугіллям Танджиро Камадо - був змушений залишитися через негоду в місті, в якому продавав свій товар. Повернувшись в рідне село, він виявляє, що його мати, молодші сестри і брати загинули в результаті нападу демонів, в існування яких Танджиро відмовлявся вірити раніше.Єдиною вижила після цієї події його найближча за віком сестра Недзуко, яка виявилася заражена демонічної кров'ю і сама обернулася в них. При цьому дівчина зуміла все ж зберегти частину свого людської свідомості. Аби не допустити кидати в біді сестру, Танджиро вирішує стати вбивцею демонів, щоб відшукати у цих істот засіб зробити Недзуко знову людиною.</p>
-          <footer bgcolor="black" id="contact" align="center">
+<footer bgcolor="black" id="contact" align="center">
             <hr color="black">
             <h3 align="left">КОНТАКТНА ІНФА:</h3>
-            <p align="center">Телефон: 0999999999</p>
-            <p align="center">Електронка: elektronka_example@ukr.net</p>
-            <a href="#top"> <img align="right" width="50" height="50" border="5" src="images/button_up_arrow.jpg"></a>
-          </footer>
+            <p align="center">Електронка: <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#search/yakbi.team%40gmail.com?compose=new">yakbi.team@gmail.com</a></p>
+            <p align="center">Спільнота Discord: <a href="https://discord.gg/tRhdTxE6CR">https://discord.gg/tRhdTxE6CR</a></p>
+            <p align="center">Спільнота Telegram: <a>teleg.run/</a></p>
+            <a href="https://discord.gg/tRhdTxE6CR"><img src="../images/footer_discord.png" height="50" width="50"></a>
+            <a href="https://www.youtube.com/channel/UCvSH4yiL27nkSLaZ6338O4A"><img src="../images/footer_youtube.png" height="50" width="75"></a>
+            <a href="https://www.instagram.com/yakbi_team/"><img src="../images/footer_instagram.png" height="50" width="50"></a>
+            <a href=""><img src="../images/footer_telegram.png" height="50" width="50"></a>
+            <a href="#top"> <img align="right" width="50" height="50" border="5" src="../images/button_up_arrow.jpg"></a>
+</footer>
 </body>
 </html>
