--- a/pages/work.html
+++ b/pages/work.html
@@ -10,18 +10,18 @@
     <link href="/images/button_up_arrow.jpg" rel="shortcut icon" type="image/x-icon">
   </head>
   
-  <body>
-    <header>
-      <nav class="fixed-nav-bar">
-         <img class="site_small_logo" src="images/site_small_nav_logo.jpg" height="54" width="54">
-         <a class="fixed-nav-bar-button" href="/index.html">Головна</a>
-         <a class="fixed-nav-bar-button0" href="/pages/news.html">Новини</a>
-         <a class="fixed-nav-bar-button0" href="/pages/allpages.html">Статті</a>
-         <a><img src="/images/logo_yalbizesayt.jpg" height="54" width="150"></a>
-         <a class="fixed-nav-bar-button0" href="/pages/write.html">Написати статтю</a>
+ <body bgcolor="#AB00FF" background="../images/bg.jpg" no-repeat bgcolor="green" alink="white">
+   <nav class="fixed-nav-bar">
+         <img class="site_small_logo" src="../images/site_small_nav_logo.jpg" height="54" width="54">
+         <a class="fixed-nav-bar-button" href="../index.html">Головна</a>
+         <a class="fixed-nav-bar-button0" href="../pages/news.html">Новини</a>
+         <a class="fixed-nav-bar-button0" href="../pages/allpages.html">Статті</a>
+         <a class="fixed-nav-bar-button0" href="../pages/work.html">Послуги</a>
+         <a><img src="../images/logo_yalbizesayt.jpg" height="54" width="150"></a>
+         <a class="fixed-nav-bar-button0" href="../pages/write.html">Написати статтю</a>
          <a class="fixed-nav-bar-button0" href="#contact">Контакти</a>
-         <a class="fixed-nav-bar-button0" href="/pages/about.html">Про проект</a>
-         <a class="fixed-nav-bar-button2" href="/pages/buy_pro.html">Підтримати розробників</a>
+         <a class="fixed-nav-bar-button0" href="../pages/about.html">Про проект</a>
+         <a class="fixed-nav-bar-button2" href="../pages/buy_pro.html">Підтримати розробників</a>
      </nav>
      <h3>НЕ ЗВЕРТАЙТЕ УВАГИ</h3>
       <h1 align="center">#ЯКБИЦЕСАЙТ</h1>
@@ -31,12 +31,18 @@
   	<body alink="white">
   	<body bgcolor="green">
       <hr color="blue">
-      <footer bgcolor="black" id="contact" align="center">
-          <h3 align="left">КОНТАКТНА ІНФА:</h3>
-          <p align="center">Телефон: 0999999999</p>
-          <p align="center">Електронка: yakbiteam@gmail.com</p>
-          <a href="#top"> <img align="right" width="50" height="50" border="5" src="../images/button_up_arrow.jpg"></a>
-      </footer>
+<footer bgcolor="black" id="contact" align="center">
+            <hr color="black">
+            <h3 align="left">КОНТАКТНА ІНФА:</h3>
+            <p align="center">Електронка: <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#search/yakbi.team%40gmail.com?compose=new">yakbi.team@gmail.com</a></p>
+            <p align="center">Спільнота Discord: <a href="https://discord.gg/tRhdTxE6CR">https://discord.gg/tRhdTxE6CR</a></p>
+            <p align="center">Спільнота Telegram: <a>teleg.run/</a></p>
+            <a href="https://discord.gg/tRhdTxE6CR"><img src="../images/footer_discord.png" height="50" width="50"></a>
+            <a href="https://www.youtube.com/channel/UCvSH4yiL27nkSLaZ6338O4A"><img src="../images/footer_youtube.png" height="50" width="75"></a>
+            <a href="https://www.instagram.com/yakbi_team/"><img src="../images/footer_instagram.png" height="50" width="50"></a>
+            <a href=""><img src="../images/footer_telegram.png" height="50" width="50"></a>
+            <a href="#top"> <img align="right" width="50" height="50" border="5" src="../images/button_up_arrow.jpg"></a>
+</footer>
   </body>
   
   
