--- a/pages/write.html
+++ b/pages/write.html
@@ -8,36 +8,37 @@
     <link rel="stylesheet" href="../css/style.css">
     <meta name="keywords" content="Сайт про цифрові технології ігри комп’ютери телефони школа гдз готові домашні завдання готове домашнє завдання український сайт укр найкращий супер пупер дупер купер мега лол какашка найгірший сайт в світі хіхі хаха шо робити ЛАГ лаганий сайт лаги Львівська Академічна Гімназія топ">
 </head>
-<body bgcolor="#AB00FF" background="../images/bg.jpg" no-repeat bgcolor="green" alink="white">
+ <body bgcolor="#AB00FF" background="../images/bg.jpg" no-repeat bgcolor="green" alink="white">
    <nav class="fixed-nav-bar">
-         <img class="site_small_logo" src="images/site_small_nav_logo.jpg" height="54" width="54">
-         <a class="fixed-nav-bar-button" href="/index.html">Головна</a>
-         <a class="fixed-nav-bar-button0" href="/pages/news.html">Новини</a>
-         <a class="fixed-nav-bar-button0" href="/pages/allpages.html">Статті</a>
-         <a class="fixed-nav-bar-button0" href="/pages/work.html">Послуги</a>
-         <a><img src="/images/logo_yalbizesayt.jpg" height="54" width="150"></a>
-         <a class="fixed-nav-bar-button0" href="/pages/write.html">Написати статтю</a>
+         <img class="site_small_logo" src="../images/site_small_nav_logo.jpg" height="54" width="54">
+         <a class="fixed-nav-bar-button" href="../index.html">Головна</a>
+         <a class="fixed-nav-bar-button0" href="../pages/news.html">Новини</a>
+         <a class="fixed-nav-bar-button0" href="../pages/allpages.html">Статті</a>
+         <a class="fixed-nav-bar-button0" href="../pages/work.html">Послуги</a>
+         <a><img src="../images/logo_yalbizesayt.jpg" height="54" width="150"></a>
+         <a class="fixed-nav-bar-button0" href="../pages/write.html">Написати статтю</a>
          <a class="fixed-nav-bar-button0" href="#contact">Контакти</a>
-         <a class="fixed-nav-bar-button0" href="/pages/about.html">Про проект</a>
-         <a class="fixed-nav-bar-button2" href="/pages/buy_pro.html">Підтримати розробників</a>
+         <a class="fixed-nav-bar-button0" href="../pages/about.html">Про проект</a>
+         <a class="fixed-nav-bar-button2" href="../pages/buy_pro.html">Підтримати розробників</a>
      </nav>
 <h3>НЕ ЗВЕРТАЙТЕ УВАГИ</h3>
 <h1 align="center" style="color: white">#ЯКБИЦЕСАЙТ</h1>
 <h4 align="center">www.yakbizesayt.com.ua</h4>
 <hr color="black">
-<h3>Якщо ви зайшли у цю вкладку, значить, ви хочете написати статтю/новину на нашому сайті. Ви можете надіслати свою статтю чи новину на електронну пошту <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcSHwsJTdjPHghprzkSNnVCPhZxnqKLtRtmxPLlflRfpTGDmfFxVKrLLQDTJcvzXPgfcgpxfp">yakbiteam@gmail.com</a></h3>
+<h3>Якщо ви зайшли у цю вкладку, значить, ви хочете написати статтю/новину на нашому сайті. Ви можете надіслати свою статтю чи новину на електронну пошту <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcSHwsJTdjPHghprzkSNnVCPhZxnqKLtRtmxPLlflRfpTGDmfFxVKrLLQDTJcvzXPgfcgpxfp">yakbiteam@gmail.com</a> або перейти по кнопці знизу</h3>
+<a class="fixed-nav-bar-button1" href="https://docs.google.com/forms/d/e/1FAIpQLSd4coDKDW_VXQ79WJ2YUViK1e_toV9xPo1YFBRZLg829WoDOg/viewform">Написати</a>
 <h3 class="date">18.11.20</h3>
 <footer bgcolor="black" id="contact" align="center">
             <hr color="black">
             <h3 align="left">КОНТАКТНА ІНФА:</h3>
-            <p align="center">Електронка: yakbiteam@gmail.com</p>
+            <p align="center">Електронка: <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#search/yakbi.team%40gmail.com?compose=new">yakbi.team@gmail.com</a></p>
             <p align="center">Спільнота Discord: <a href="https://discord.gg/tRhdTxE6CR">https://discord.gg/tRhdTxE6CR</a></p>
             <p align="center">Спільнота Telegram: <a>teleg.run/</a></p>
-            <a href="https://discord.gg/tRhdTxE6CR"><img src="images/system/footer_discord.png" height="50" width="50"></a>
-            <a href="https://www.youtube.com/channel/UCvSH4yiL27nkSLaZ6338O4A"><img src="/%25D0%2594%25D0%25B8%25D0%25B7%25D0%25B0%25D0%25B9%25D0%25BD,%2520%25D0%259A%25D0%2590%25D0%25A0%25D0%25A2%25D0%2598%25D0%259D%25D0%259A%25D0%2598%25D0%2598/footer_youtube_active.jpg" height="50" width="50"></a>
-            <a href="https://www.instagram.com/yakbi_team/"><img src="/%25D0%2594%25D0%25B8%25D0%25B7%25D0%25B0%25D0%25B9%25D0%25BD,%2520%25D0%259A%25D0%2590%25D0%25A0%25D0%25A2%25D0%2598%25D0%259D%25D0%259A%25D0%2598%25D0%2598/footer_instag_active.jpg" height="50" width="50"></a>
-            <a href=""><img src="/%25D0%2594%25D0%25B8%25D0%25B7%25D0%25B0%25D0%25B9%25D0%25BD,%2520%25D0%259A%25D0%2590%25D0%25A0%25D0%25A2%25D0%2598%25D0%259D%25D0%259A%25D0%2598%25D0%2598/footer_teleg_active.jpg" height="50" width="50"></a>
-            <a href="#top"> <img align="right" width="50" height="50" border="5" src="images/button_up_arrow.jpg"></a>
+            <a href="https://discord.gg/tRhdTxE6CR"><img src="../images/footer_discord.png" height="50" width="50"></a>
+            <a href="https://www.youtube.com/channel/UCvSH4yiL27nkSLaZ6338O4A"><img src="../images/footer_youtube.png" height="50" width="75"></a>
+            <a href="https://www.instagram.com/yakbi_team/"><img src="../images/footer_instagram.png" height="50" width="50"></a>
+            <a href=""><img src="../images/footer_telegram.png" height="50" width="50"></a>
+            <a href="#top"> <img align="right" width="50" height="50" border="5" src="../images/button_up_arrow.jpg"></a>
 </footer>
 </body>
 </html>
