--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -2,7 +2,7 @@
   
 <html>
   <head>
-    <title>Підтримати - #ЯКБИЦЕСАЙТ</title>
+    <title>наші контакти</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../css/style.css">
     <meta name="keywords" content="Сайт про цифрові технології, ігри, комп’ютери, телефони, школу">
@@ -19,7 +19,7 @@
          <a class="fixed-nav-bar-button0" href="../pages/work.html">Послуги</a>
          <a><img src="../images/logo_yalbizesayt.jpg" height="54" width="150"></a>
          <a class="fixed-nav-bar-button0" href="../pages/write.html">Написати статтю</a>
-                  <a class="fixed-nav-bar-button0" href="../pages/contacts.html">Контакти</a>
+         <a class="fixed-nav-bar-button0" href="../pages/contacts.html">Контакти</a>
          <a class="fixed-nav-bar-button0" href="../pages/about.html">Про проект</a>
          <a class="fixed-nav-bar-button2" href="../pages/buy_pro.html">Підтримати розробників</a>
      </nav>
@@ -27,10 +27,8 @@
       <h1 align="center">#ЯКБИЦЕСАЙТ</h1>
       <h4 align="center">www.yakbizesayt.com.ua</h4>
       <hr color="blue">
-  	<body bgcolor="#AB00FF" background="/images/bg.jpg" no-repeat>
-  	<body alink="white">
-  	<body bgcolor="green">
       <hr color="blue">
+      <h1>Ця сторінка зроблена для того ,щоб з нами можна було зв'язатися</h1>
 <footer bgcolor="black" id="contact" align="center">
             <hr color="black">
             <h3 align="left">КОНТАКТНА ІНФА:</h3>
@@ -43,7 +41,7 @@
             <a href=""><img src="../images/footer_telegram.png" height="50" width="50"></a>
             <a href="#top"> <img align="right" width="50" height="50" border="5" src="../images/button_up_arrow.jpg"></a>
 </footer>
-  </body>
+</body>
   
   
 </html>
