--- a/pages/write.html
+++ b/pages/write.html
@@ -17,7 +17,7 @@
          <a class="fixed-nav-bar-button0" href="../pages/work.html">Послуги</a>
          <a><img src="../images/logo_yalbizesayt.jpg" height="54" width="150"></a>
          <a class="fixed-nav-bar-button0" href="../pages/write.html">Написати статтю</a>
-         <a class="fixed-nav-bar-button0" href="#contact">Контакти</a>
+                  <a class="fixed-nav-bar-button0" href="../pages/contacts.html">Контакти</a>
          <a class="fixed-nav-bar-button0" href="../pages/about.html">Про проект</a>
          <a class="fixed-nav-bar-button2" href="../pages/buy_pro.html">Підтримати розробників</a>
      </nav>
