--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
             <p align="center">Електронка: <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#search/yakbi.team%40gmail.com?compose=new">yakbi.team@gmail.com</a></p>
             <p align="center">Спільнота Discord: <a href="https://discord.gg/tRhdTxE6CR">https://discord.gg/tRhdTxE6CR</a></p>
             <p align="center">Спільнота Telegram: <a>teleg.run/</a></p>
-            <a href="https://discord.gg/tRhdTxE6CR"><img src="../images/footer_discord.png" height="50" width="50"></a>
-            <a href="https://www.youtube.com/channel/UCvSH4yiL27nkSLaZ6338O4A"><img src="../images/footer_youtube.png" height="50" width="75"></a>
-            <a href="https://www.instagram.com/yakbi_team/"><img src="../images/footer_instagram.png" height="50" width="50"></a>
-            <a href=""><img src="../images/footer_telegram.png" height="50" width="50"></a>
-            <a href="#top"> <img align="right" width="50" height="50" border="5" src="../images/button_up_arrow.jpg"></a>
+            <a href="https://discord.gg/tRhdTxE6CR"><img src="/images/footer_discord.png" height="50" width="50"></a>
+            <a href="https://www.youtube.com/channel/UCvSH4yiL27nkSLaZ6338O4A"><img src="/images/footer_youtube.png" height="50" width="75"></a>
+            <a href="https://www.instagram.com/yakbi_team/"><img src="/images/footer_instagram.png" height="50" width="50"></a>
+            <a href=""><img src="/images/footer_telegram.png" height="50" width="50"></a>
+            <a href="#top"> <img align="right" width="50" height="50" border="5" src="/images/button_up_arrow.jpg"></a>
 </footer>
   </body>
   
