--- a/allpages/ps.html
+++ b/allpages/ps.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Що таке кеш? Як його розпакувати його?</title>
+    <title>PS</title>
     <link rel="stylesheet" href="../css/style.css">
     <meta name="keywords" content="Сайт про цифрові технології ігри комп’ютери телефони школа гдз готові домашні завдання готове домашнє завдання український сайт укр найкращий супер пупер дупер купер мега лол какашка найгірший сайт в світі хіхі хаха шо робити ЛАГ лаганий сайт лаги Львівська Академічна Гімназія топ">
 </head>
