--- a/pages/index.html
+++ b/pages/index.html
@@ -16,7 +16,7 @@
          <a class="fixed-nav-bar-button" href="index.html">Головна</a>
          <a class="fixed-nav-bar-button0" href="pages/news.html">Новини</a>
          <a class="fixed-nav-bar-button0" href="pages/allpages.html">Статті</a>
-         <a><img src="images/logo_yalbizesayt.jpg" height="54" width="150"></a>
+         <a><img src="images/logo_yalbizesayt.jpg" height="54" width="300"></a>
          <a class="fixed-nav-bar-button0" href="pages/write.html">Написати статтю</a>
                  <a class="fixed-nav-bar-button0" href="../pages/contacts.html">Контакти</a>
          <a class="fixed-nav-bar-button0" href="pages/about.html">Про проект</a>
@@ -28,7 +28,7 @@
           <hr color="black">
           <h1>Новина - тепер сайт має свою адресу</h1>
           <h3 class="date">11.12.20</h3>
-          <p>Команда розробників після 2 місяців виставляє свій сайт #ЯКБИЦЕСАЙТ на хостинг! Тепер сайт має адресу - <a href="https://yakbizesayt.netlify.app" >https://yakbizesayt.netlify.app</a></p>
+          <p>Команда розробників після 2 місяців виставляє свій сайт #ЯКБИЦЕСАЙТ на хостинг! Тепер сайт має адресу - <a href="" ></a></p>
           <hr color="black">
           <h1>Увага! Розробка сайту почалась</h1>
           <h3 class="date">15.09.20</h3>
