--- a/pages/allpages.html
+++ b/pages/allpages.html
@@ -17,7 +17,7 @@
          <a class="fixed-nav-bar-button0" href="../pages/news.html">Новини</a>
          <a class="fixed-nav-bar-button0" href="../pages/allpages.html">Статті</a>
          <a class="fixed-nav-bar-button0" href="../pages/work.html">Послуги</a>
-         <a><img src="../images/logo_yalbizesayt.jpg" height="54" width="150"></a>
+         <a><img src="../images/logo_yalbizesayt.jpg" height="54" width="300"></a>
          <a class="fixed-nav-bar-button0" href="../pages/write.html">Написати статтю</a>
          <a class="fixed-nav-bar-button0" href="../pages/contacts.html">Контакти</a>
          <a class="fixed-nav-bar-button0" href="../pages/about.html">Про проект</a>
@@ -41,6 +41,9 @@
           <hr color="black">
           <a href="../allpages/ps.html"><h1>Photoshop</h1></a>
           <p>Коротка інформація про Adobe Photoshop</p>
+          <hr color="black">
+                <a href="../allpages/Boku_dake.html"><h1>Місто небуття</h1></a>
+          <p>Коротка історія аніме</p>
           <hr color="black">
   	<body bgcolor="#AB00FF" background="/images/bg.jpg" no-repeat>
   	<body alink="white">
